[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pycable"
version = "0.1.0"
description = "Python GUI wrapper around the CableDynamics C++ cable_solver"
readme = "README.md"
license = { text = "LGPL-3.0-or-later" }
requires-python = ">=3.10,<3.13"
authors = [
    { name = "Tomoaki Hirakawa" },
]
dependencies = [
    "numpy>=1.24",
    # PySide6 6.10.x has a QSplashScreen.show() hang and an eventFilter
    # recursion bug on macOS — pin below 6.10 until those are resolved.
    "PySide6>=6.8,<6.10",
    "pyvista==0.43.*",
    "pyvistaqt>=0.11",
    # VTK 9.6.0 hangs on import under Python 3.12 on macOS — pin to 9.3.1.
    "vtk==9.3.1",
]

[project.optional-dependencies]
test = [
    "pytest>=7",
    "pytest-qt>=4.2",
]

[project.scripts]
pycable = "pycable.gui.app:main"

[tool.setuptools]
packages = ["pycable", "pycable.gui"]

[tool.setuptools.package-dir]
pycable = "pycable"
"pycable.gui" = "pycable/gui"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra -q"
